// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`accessibility should expose correct accessibility tree if accessibility properties are set 1`] = `
{
  "name": "Some more detailed label",
  "role": "link",
}
`;

exports[`accessibility should expose correct accessibility tree if accessibility properties are set 2`] = `
{
  "name": "Some more detailed label",
  "role": "link",
}
`;

exports[`accessibility should expose correct accessibility tree if label is hidden 1`] = `
{
  "name": "Some label",
  "role": "link",
}
`;

exports[`accessibility should expose correct initial accessibility tree properties 1`] = `
{
  "name": "Some label",
  "role": "link",
}
`;

exports[`accessibility should expose correct initial accessibility tree properties 2`] = `
{
  "children": [
    {
      "role": "none",
    },
  ],
  "role": "none",
}
`;
